--- a/index.html
+++ b/index.html
@@ -13,41 +13,47 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <div class="section-hero">
-      <div class="hero">
-        <div class="hero-text-box">
-          <h1 class="heading-primary">
-            A healthy meal delivered to your door, every single day
-          </h1>
-          <p class="hero-description">
-            The smart 365-days-per-year food subscription that will make you eat
-            healthy again. Tailored to your personal tastes and nutritional
-            needs.
-          </p>
-          <a href="#" class="btn btn--fill margin-right-sm"
-            >start eating well</a
-          >
-          <a href="#" class="btn btn--outline">learn more &darr;</a>
-
-          <div class="delivered-meals">
-            <div class="delivered-imgs">
-              <img src="img/customers/customer-1.jpg" alt="coustomer photo" />
-              <img src="img/customers/customer-2.jpg" alt="coustomer photo" />
-              <img src="img/customers/customer-3.jpg" alt="coustomer photo" />
-              <img src="img/customers/customer-4.jpg" alt="coustomer photo" />
-              <img src="img/customers/customer-5.jpg" alt="coustomer photo" />
-              <img src="img/customers/customer-6.jpg" alt="coustomer photo" />
-            </div>
-            <p class="delivered-text">
-              <span>250,000+</span> meals delivered last year!
+    <header class="header">
+      <img src="./img/omnifood-logo.png" alt="logo" class="logo" />
+      <nav class="main-nav">navigation</nav>
+    </header>
+    <main>
+      <section class="section-hero">
+        <div class="hero">
+          <div class="hero-text-box">
+            <h1 class="heading-primary">
+              A healthy meal delivered to your door, every single day
+            </h1>
+            <p class="hero-description">
+              The smart 365-days-per-year food subscription that will make you
+              eat healthy again. Tailored to your personal tastes and
+              nutritional needs.
             </p>
+            <a href="#" class="btn btn--fill margin-right-sm"
+              >start eating well</a
+            >
+            <a href="#" class="btn btn--outline">learn more &darr;</a>
+
+            <div class="delivered-meals">
+              <div class="delivered-imgs">
+                <img src="img/customers/customer-1.jpg" alt="coustomer photo" />
+                <img src="img/customers/customer-2.jpg" alt="coustomer photo" />
+                <img src="img/customers/customer-3.jpg" alt="coustomer photo" />
+                <img src="img/customers/customer-4.jpg" alt="coustomer photo" />
+                <img src="img/customers/customer-5.jpg" alt="coustomer photo" />
+                <img src="img/customers/customer-6.jpg" alt="coustomer photo" />
+              </div>
+              <p class="delivered-text">
+                <span>250,000+</span> meals delivered last year!
+              </p>
+            </div>
+          </div>
+
+          <div class="hero-img-box">
+            <img src="img/hero.png" alt="hero img" class="hero-img" />
           </div>
         </div>
-
-        <div class="hero-img-box">
-          <img src="img/hero.png" alt="hero img" class="hero-img" />
-        </div>
-      </div>
-    </div>
+      </section>
+    </main>
   </body>
 </html>
