--- a/index.html
+++ b/index.html
@@ -15,7 +15,17 @@
   <body>
     <header class="header">
       <img src="./img/omnifood-logo.png" alt="logo" class="logo" />
-      <nav class="main-nav">navigation</nav>
+      <nav class="main-nav">
+        <ul class="main-nav-list">
+          <ul class="main-nav-list">
+            <li><a class="main-nav-link" href="#">section 1</a></li>
+            <li><a class="main-nav-link" href="#">section 2</a></li>
+            <li><a class="main-nav-link" href="#">section 3</a></li>
+            <li><a class="main-nav-link" href="#">section 4</a></li>
+            <li><a class="main-nav-link nav-cta" href="#">section 5</a></li>
+          </ul>
+        </ul>
+      </nav>
     </header>
     <main>
       <section class="section-hero">
