--- a/index.html
+++ b/index.html
@@ -64,6 +64,20 @@
           </div>
         </div>
       </section>
+
+      <section class="section-how container grid grid--2-cols">
+        <div>test 1</div>
+        <div>test 2</div>
+        <div>test 3</div>
+        <div>test 4</div>
+      </section>
+
+      <section class="section-how grid grid--3-cols">
+        <div>test 1</div>
+        <div>test 2</div>
+        <div>test 3</div>
+        <div>test 4</div>
+      </section>
     </main>
   </body>
 </html>
