featured in section

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
       </nav>
     </header>
     <main>
+      <!-- HERO & HEADER SECTION -->
       <section class="section-hero">
         <div class="hero">
           <div class="hero-text-box">
@@ -66,6 +67,25 @@
         </div>
       </section>
 
+      <!-- SECTION FEATURED -->
+
+      <section class="section-featured">
+        <div class="container">
+          <h2 class="heading-featured-in">As featured in</h2>
+          <div class="logos">
+            <img src="./img/logos/techcrunch.png" alt="techcrunch logo" />
+            <img
+              src="./img/logos/business-insider.png"
+              alt="business-insider"
+            />
+            <img src="./img/logos/the-new-york-times.png" alt="the-new-york-times" />
+            <img src="./img/logos/forbes.png" alt="forbes" />
+            <img src="./img/logos/usa-today.png" alt="usa today" />
+          </div>
+        </div>
+      </section>
+
+      <!-- HOW IT WORK SECTION -->
       <section class="section-how">
         <div class="container">
           <span class="subheading">how it works</span>
@@ -117,11 +137,11 @@
           <!-- STEP 03 -->
           <div class="step-text-box">
             <p class="step-number">03</p>
-            <h3 class="heading-tertairy">
-              Receive meals at convenient time
-            </h3>
+            <h3 class="heading-tertairy">Receive meals at convenient time</h3>
             <p class="step-description">
-              Best chefs in town will cook your selected meal every day, and we will deliver it to your door whenever works best for you. You can change delivery schedule and address daily!
+              Best chefs in town will cook your selected meal every day, and we
+              will deliver it to your door whenever works best for you. You can
+              change delivery schedule and address daily!
             </p>
           </div>
           <div class="step-img-box">
