meals secion part 1

--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
       href="https://fonts.googleapis.com/css2?family=Inter:slnt,wght@-10..0,100..900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
       rel="stylesheet"
     />
+    <script
+      defer
+      type="module"
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      defer
+      nomodule
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
+    ></script>
     <link rel="stylesheet" href="css/styles.css" />
     <link rel="stylesheet" href="css/general.css" />
   </head>
@@ -78,7 +88,10 @@
               src="./img/logos/business-insider.png"
               alt="business-insider"
             />
-            <img src="./img/logos/the-new-york-times.png" alt="the-new-york-times" />
+            <img
+              src="./img/logos/the-new-york-times.png"
+              alt="the-new-york-times"
+            />
             <img src="./img/logos/forbes.png" alt="forbes" />
             <img src="./img/logos/usa-today.png" alt="usa today" />
           </div>
@@ -151,6 +164,46 @@
               class="step-img"
             />
           </div>
+        </div>
+      </section>
+
+      <!-- MEALS SECTION -->
+      <section class="section-meals">
+        <div class="container">
+          <span class="subheading">Meals</span>
+          <h2 class="heading-secondery">
+            Omnifood AI chooses from 5,000+ recipes
+          </h2>
+        </div>
+        <div class="container grid grid--3-cols">
+          <div class="meal">
+            <img
+              src="./img/meals/meal-1.jpg"
+              class="meal-img"
+              alt="Japanese Gyozas"
+            />
+            <p class="meal-title">Japanese Gyozas</p>
+            <span class="tag">Vegetarian</span>
+            <ul class="meal-attributes">
+
+              <li class="meal-attribute">
+                <ion-icon name="flame-outline"></ion-icon>
+                <span>650 Calories</span>
+              </li>
+
+              <li class="meal-attribute">
+                <ion-icon name="restaurant-outline"></ion-icon
+                ><span>NutriScore &reg; 74</span>
+              </li>
+              
+              <li class="meal-attribute">
+                <ion-icon name="star-outline"></ion-icon
+                ><span>4.9 rating (537)</span>
+              </li>
+            </ul>
+          </div>
+          <div class="meal">MEALS</div>
+          <div class="list">LIST OF DIATS</div>
         </div>
       </section>
     </main>
