--- a/index.html
+++ b/index.html
@@ -290,12 +290,10 @@
         </div>
       </section>
 
-      <section class="section-testimonials grid grid--2-cols">
+      <section class="section-testimonials">
         <div class="testamonials-container">
           <span class="subheading">Testimonials</span>
-          <h2 class="heading-secondery">
-            Once you try it, you can't go back.
-          </h2>
+          <h2 class="heading-secondery">Once you try it, you can't go back.</h2>
           <div class="testimonials">
             <figgure class="testimonial">
               <img
@@ -350,7 +348,55 @@
             </figgure>
           </div>
         </div>
-        <div class="gallery">Gallery</div>
+        <div class="gallery">
+          <figure class="gallery-item">
+            <img src="img//gallery/gallery-1.jpg" alt="food photos" />
+          </figure>
+
+          <figure class="gallery-item">
+            <img src="img//gallery/gallery-2.jpg" alt="food photos" />
+          </figure>
+
+          <figure class="gallery-item">
+            <img src="img//gallery/gallery-3.jpg" alt="food photos" />
+          </figure>
+
+          <figure class="gallery-item">
+            <img src="img//gallery/gallery-4.jpg" alt="food photos" />
+          </figure>
+
+          <figure class="gallery-item">
+            <img src="img//gallery/gallery-5.jpg" alt="food photos" />
+          </figure>
+
+          <figure class="gallery-item">
+            <img src="img//gallery/gallery-6.jpg" alt="food photos" />
+          </figure>
+
+          <figure class="gallery-item">
+            <img src="img//gallery/gallery-7.jpg" alt="food photos" />
+          </figure>
+
+          <figure class="gallery-item">
+            <img src="img//gallery/gallery-8.jpg" alt="food photos" />
+          </figure>
+
+          <figure class="gallery-item">
+            <img src="img//gallery/gallery-9.jpg" alt="food photos" />
+          </figure>
+
+          <figure class="gallery-item">
+            <img src="img//gallery/gallery-10.jpg" alt="food photos" />
+          </figure>
+
+          <figure class="gallery-item">
+            <img src="img//gallery/gallery-11.jpg" alt="food photos" />
+          </figure>
+
+          <figure class="gallery-item">
+            <img src="img//gallery/gallery-12.jpg" alt="food photos" />
+          </figure>
+        </div>
       </section>
     </main>
   </body>
