--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
         </div>
 
         <div class="container grid grid--2-cols">
-          <div class="pricing-plan">
+          <div class="pricing-plan pricing-plan--stater">
             <header class="plan-header">
               <p class="plan-name">Starter</p>
               <p class="plan-price"><span>$</span>399</p>
@@ -421,11 +421,14 @@
               </li>
               <li class="list-item">
                 <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
-                <span> Order times are between 11am and 9pm </span>
+                <span> Order from between 11am and 9pm </span>
               </li>
               <li class="list-item">
                 <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
                 <span> Delivery is free </span>
+              </li>
+              <li class="list-item">
+                <ion-icon class="list-icon" name="close-outline"></ion-icon>
               </li>
             </ul>
             <div class="plan-sign-up">
@@ -433,7 +436,7 @@
             </div>
           </div>
 
-          <div class="pricing-plan">
+          <div class="pricing-plan pricing-plan--complete">
             <header class="plan-header">
               <p class="plan-name">Complete</p>
               <p class="plan-price"><span>$</span>649</p>
@@ -442,11 +445,14 @@
             <ul class="list">
               <li class="list-item">
                 <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
-                <span> 2 meals per day </span>
+                <span> <strong>2 meals</strong> per day </span>
               </li>
               <li class="list-item">
                 <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
-                <span> Order 24/7 </span>
+                <span>
+                  Order
+                  <strong>24/7</strong>
+                </span>
               </li>
               <li class="list-item">
                 <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
@@ -461,6 +467,13 @@
               <a href="#" class="btn btn--fill">start eating well</a>
             </div>
           </div>
+        </div>
+
+        <div class="container grid grid--4-cols">
+          <div class="feature">Feature 1</div>
+          <div class="feature">Feature 2</div>
+          <div class="feature">Feature 3</div>
+          <div class="feature">Feature 4</div>
         </div>
       </section>
     </main>
