--- a/index.html
+++ b/index.html
@@ -470,7 +470,10 @@
         </div>
 
         <div class="container grid">
-          <aside class="plan-details">Prices include all applicable taxes. You can cancel at any time. Both plans include the following:</aside>
+          <aside class="plan-details">
+            Prices include all applicable taxes. You can cancel at any time.
+            Both plans include the following:
+          </aside>
         </div>
 
         <div class="container grid grid--4-cols">
@@ -508,6 +511,21 @@
               Going on vacation? Just pause your subscription, and we refund
               unused days.
             </p>
+          </div>
+        </div>
+      </section>
+
+      <section class="section-cta">
+        <div class="container">
+          <div class="cta">
+            <div class="cta-text-box">FORM</div>
+            <div
+              class="cta-img-box"
+              role="img"
+              aria-label="a woman eating a healthy meal"
+            >
+              IMAGE
+            </div>
           </div>
         </div>
       </section>
