call to action part two

--- a/index.html
+++ b/index.html
@@ -518,7 +518,51 @@
       <section class="section-cta">
         <div class="container">
           <div class="cta">
-            <div class="cta-text-box">FORM</div>
+            <div class="cta-text-box">
+              <h2 class="heading-secondery">Get your first meal for free!</h2>
+              <p class="cta-text">
+                Healthy, tasty and hassle-free meals are waiting for you. Start
+                eating well today. You can cancel or pause anytime. And the
+                first meal is on us!
+              </p>
+
+              <form action="" class="cta-form">
+                <div>
+                  <label for="full-name">Full Name</label>
+                  <input
+                    type="text"
+                    name=""
+                    id="full-name"
+                    placeholder="John Smith"
+                    required
+                  />
+                </div>
+
+                <div>
+                  <label for="email">Email</label>
+                  <input
+                    type="email"
+                    name=""
+                    id="email"
+                    placeholder="John@example.com"
+                    required
+                  />
+                </div>
+
+                <div>
+                  <label for="select">Where did you hear about us?</label>
+                  <select name="" id="select" required>
+                    <option value="">Please select one option:</option>
+                    <option value="friends">Friends & family</option>
+                    <option value="youtube">Youtube Video</option>
+                    <option value="facebook">Facebook ad</option>
+                    <option value="other">other</option>
+                  </select>
+                </div>
+
+                <button class="btn">sign up now</button>
+              </form>
+            </div>
             <div
               class="cta-img-box"
               role="img"
