--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
       <nav class="main-nav">
         <ul class="main-nav-list">
           <ul class="main-nav-list">
-            <li><a class="main-nav-link" href="#">section 1</a></li>
-            <li><a class="main-nav-link" href="#">section 2</a></li>
-            <li><a class="main-nav-link" href="#">section 3</a></li>
-            <li><a class="main-nav-link" href="#">section 4</a></li>
-            <li><a class="main-nav-link nav-cta" href="#">section 5</a></li>
+            <li><a class="main-nav-link" href="#">How it works</a></li>
+            <li><a class="main-nav-link" href="#">Meals</a></li>
+            <li><a class="main-nav-link" href="#">Testimonials</a></li>
+            <li><a class="main-nav-link" href="#">Pricing</a></li>
+            <li><a class="main-nav-link nav-cta" href="#">Try for free</a></li>
           </ul>
         </ul>
       </nav>
@@ -578,16 +578,27 @@
     </main>
 
     <footer class="footer">
-      <div class="container grid grid--5-cols">
+      <div class="container grid grid--footer">
         <div class="logo-col">
           <a href="#" class="footer-logo">
             <img src="./img/omnifood-logo.png" alt="logo" class="logo" />
           </a>
           <ul class="social-links">
-            <li><a href=""><ion-icon name="logo-instagram"></ion-icon></a></li>
-            <li><a href=""><ion-icon name="logo-facebook"></ion-icon></a></li>
-            <li><a href=""><ion-icon name="logo-twitter"></ion-icon></a></li>
-            
+            <li>
+              <a href="" class="footer-link"
+                ><ion-icon class="social-icon" name="logo-instagram"></ion-icon
+              ></a>
+            </li>
+            <li>
+              <a href="" class="footer-link"
+                ><ion-icon class="social-icon" name="logo-facebook"></ion-icon
+              ></a>
+            </li>
+            <li>
+              <a href="" class="footer-link"
+                ><ion-icon class="social-icon" name="logo-twitter"></ion-icon
+              ></a>
+            </li>
           </ul>
           <p class="copyright">
             copyright &copy; 2024 by Omnifood inc. All rights reserved.
@@ -596,42 +607,44 @@
         <div class="address-col">
           <p class="footer-header">Contact us</p>
           <address class="contacts">
-            <p>623 Harrison St., 2nd Floor, San Francisco, CA 94107</p>
+            <p class="address">623 Harrison St., 2nd Floor, San Francisco, CA 94107</p>
             <p>
-              <a href="tel:415-201-6370">415-201-6370</a><br>
-              <a href="mailto:hello@omnifood.com">hello@omnifood.com</a>
+              <a href="tel:415-201-6370" class="footer-link">415-201-6370</a
+              ><br />
+              <a href="mailto:hello@omnifood.com" class="footer-link"
+                >hello@omnifood.com</a
+              >
             </p>
           </address>
         </div>
         <nav class="nav-col">
           <p class="footer-header">Account</p>
           <ul class="footer-nav">
-            <li><a href="">Create account</a></li>
-            <li><a href="">Sign in</a></li>
-            <li><a href="">iOS app</a></li>
-            <li><a href="">Android app</a></li>
+            <li><a href="" class="footer-link">Create account</a></li>
+            <li><a href="" class="footer-link">Sign in</a></li>
+            <li><a href="" class="footer-link">iOS app</a></li>
+            <li><a href="" class="footer-link">Android app</a></li>
           </ul>
         </nav>
 
         <nav class="nav-col">
           <p class="footer-header">Company</p>
           <ul class="footer-nav">
-            <li><a href="">About Omnifood</a></li>
-            <li><a href="">For Business</a></li>
-            <li><a href="">Cooking partners</a></li>
-            <li><a href="">Careers</a></li>
+            <li><a href="" class="footer-link">About Omnifood</a></li>
+            <li><a href="" class="footer-link">For Business</a></li>
+            <li><a href="" class="footer-link">Cooking partners</a></li>
+            <li><a href="" class="footer-link">Careers</a></li>
           </ul>
         </nav>
 
         <nav class="nav-col">
           <p class="footer-header">Resources</p>
           <ul class="footer-nav">
-            <li><a href="">Recipe directory</a></li>
-            <li><a href="">Help center</a></li>
-            <li><a href="">Privacy & terms</a></li>
+            <li><a href="" class="footer-link">Recipe directory</a></li>
+            <li><a href="" class="footer-link">Help center</a></li>
+            <li><a href="" class="footer-link">Privacy & terms</a></li>
           </ul>
         </nav>
-        
       </div>
     </footer>
   </body>
