--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <link rel="stylesheet" href="css/queries.css" />
   </head>
   <body>
-    <header class="header">
+    <header class="header nav-open">
       <a href="#">
         <img src="./img/omnifood-logo.png" alt="logo" class="logo" />
       </a>
@@ -40,6 +40,10 @@
           </ul>
         </ul>
       </nav>
+      <button class="btn-mobile-nav">
+        <ion-icon class="icon-mobile-nav" name="menu-outline"></ion-icon>
+        <ion-icon class="icon-mobile-nav" name="close-outline"></ion-icon>
+      </button>
     </header>
     <main>
       <!-- HERO & HEADER SECTION -->
