--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <link rel="stylesheet" href="css/queries.css" />
   </head>
   <body>
-    <header class="header nav-open">
+    <header class="header">
       <a href="#">
         <img src="./img/omnifood-logo.png" alt="logo" class="logo" />
       </a>
