mobile naigation and dynamic year

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Inter:slnt,wght@-10..0,100..900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
       rel="stylesheet"
     />
+    
     <script
       defer
       type="module"
@@ -20,6 +21,7 @@
       nomodule
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
     ></script>
+    <script defer src="script.js"></script>
     <link rel="stylesheet" href="css/styles.css" />
     <link rel="stylesheet" href="css/general.css" />
     <link rel="stylesheet" href="css/queries.css" />
@@ -606,7 +608,7 @@
             </li>
           </ul>
           <p class="copyright">
-            copyright &copy; 2024 by Omnifood inc. All rights reserved.
+            copyright &copy; <span class="year">2020</span> by Omnifood inc. All rights reserved.
           </p>
         </div>
         <div class="address-col">
