--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Inter:slnt,wght@-10..0,100..900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
       rel="stylesheet"
     />
-    
+
     <script
       defer
       type="module"
@@ -21,6 +21,7 @@
       nomodule
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
     ></script>
+    <script defer src="https://unpkg.com/smoothscroll-polyfill@0.4.4/dist/smoothscroll.min.js"></script>
     <script defer src="script.js"></script>
     <link rel="stylesheet" href="css/styles.css" />
     <link rel="stylesheet" href="css/general.css" />
@@ -34,11 +35,15 @@
       <nav class="main-nav">
         <ul class="main-nav-list">
           <ul class="main-nav-list">
-            <li><a class="main-nav-link" href="#">How it works</a></li>
-            <li><a class="main-nav-link" href="#">Meals</a></li>
-            <li><a class="main-nav-link" href="#">Testimonials</a></li>
-            <li><a class="main-nav-link" href="#">Pricing</a></li>
-            <li><a class="main-nav-link nav-cta" href="#">Try for free</a></li>
+            <li><a class="main-nav-link" href="#how">How it works</a></li>
+            <li><a class="main-nav-link" href="#meals">Meals</a></li>
+            <li>
+              <a class="main-nav-link" href="#testimonial">Testimonials</a>
+            </li>
+            <li><a class="main-nav-link" href="#pricing">Pricing</a></li>
+            <li>
+              <a class="main-nav-link nav-cta" href="#cta">Try for free</a>
+            </li>
           </ul>
         </ul>
       </nav>
@@ -60,10 +65,10 @@
               eat healthy again. Tailored to your personal tastes and
               nutritional needs.
             </p>
-            <a href="#" class="btn btn--fill margin-right-sm"
+            <a href="#cta" class="btn btn--fill margin-right-sm"
               >start eating well</a
             >
-            <a href="#" class="btn btn--outline">learn more &darr;</a>
+            <a href="#how" class="btn btn--outline">learn more &darr;</a>
 
             <div class="delivered-meals">
               <div class="delivered-imgs">
@@ -108,7 +113,7 @@
       </section>
 
       <!-- HOW IT WORK SECTION -->
-      <section class="section-how">
+      <section class="section-how" id="how">
         <div class="container">
           <span class="subheading">how it works</span>
           <h2 class="heading-secondery">
@@ -177,7 +182,7 @@
       </section>
 
       <!-- MEALS SECTION -->
-      <section class="section-meals">
+      <section class="section-meals" id="meals">
         <div class="container center-text">
           <span class="subheading">Meals</span>
           <h2 class="heading-secondery">
@@ -299,7 +304,7 @@
         </div>
       </section>
 
-      <section class="section-testimonials">
+      <section class="section-testimonials" id="testimonial">
         <div class="testamonials-container">
           <span class="subheading">Testimonials</span>
           <h2 class="heading-secondery">Once you try it, you can't go back.</h2>
@@ -408,7 +413,7 @@
         </div>
       </section>
 
-      <section class="section-pricing">
+      <section class="section-pricing" id="pricing">
         <div class="container">
           <span class="subheading">Pricing</span>
           <h2 class="heading-secondery">
@@ -524,7 +529,7 @@
         </div>
       </section>
 
-      <section class="section-cta">
+      <section class="section-cta" id="cta">
         <div class="container">
           <div class="cta">
             <div class="cta-text-box">
@@ -608,13 +613,16 @@
             </li>
           </ul>
           <p class="copyright">
-            copyright &copy; <span class="year">2020</span> by Omnifood inc. All rights reserved.
+            copyright &copy; <span class="year">2020</span> by Omnifood inc. All
+            rights reserved.
           </p>
         </div>
         <div class="address-col">
           <p class="footer-header">Contact us</p>
           <address class="contacts">
-            <p class="address">623 Harrison St., 2nd Floor, San Francisco, CA 94107</p>
+            <p class="address">
+              623 Harrison St., 2nd Floor, San Francisco, CA 94107
+            </p>
             <p>
               <a href="tel:415-201-6370" class="footer-link">415-201-6370</a
               ><br />
